<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <ImageView
            android:id="@+id/iv_picker_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:src="@drawable/chose_image_back"/>

        <TextView
            android:id="@+id/tv_picker_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableEnd="@drawable/paper_menu_down"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/paper_menu_down"
            android:text="@string/str_media_type_video"
            android:textColor="@color/color_000000"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/select_next_btn"
            android:enabled="false"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/str_next_text"
            android:textColor="@color/color_666666"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_e4e4e4"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_e4e4e4"/>

        <CheckBox
            android:id="@+id/cb_compress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:background="@color/color_tran"
            android:button="@drawable/check_box_bg"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="@string/str_compress"
            android:textColor="@color/color_666666"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:enabled="false"
            android:text="@string/str_pre_text"
            android:textColor="@color/color_8c8c8c"
            android:textSize="14sp"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@+id/layout_top"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@+id/layout_top"
        android:visibility="gone">

        <TextView
            android:id="@+id/empty_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/str_empty_text"
            android:textSize="16sp"/>
    </FrameLayout>
</RelativeLayout>
